# Voxory

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dependencies/whisper/: CMakeLists.txt
include/: type_traits.h  utility.h
include/audio/: audio.h  audio_internal.h
include/audio/audio_decoder/: mp3_decoder.h
include/audio/realtime/: audio_capture.h
include/containers/: chunk_buffer.h  container_dbg.h  containers_dbg.h  containers_internal.h  heap_array.h  raw_array.h  ring_buffer.h  static_array.h
include/containers/detail/: containers_internal.h
include/containers/impl/: chunk_buffer.h  heap_array.h  list.h  ring_buffer.h  static_array.h
include/interfaces/: audio_decoder.h
include/multithreading/: spin_lock.h
include/platform/: VirtualAlloc.h  platform.h
src/: CMakeLists.txt  main.cpp
src/audio/: audio_capture.cpp
src/audio/realtime/: audio_capture.cpp
src/containers/: container_dbg.cpp  containers_dbg.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/containers/: CMakeLists.txt
tests/core/containers/source/: heap_array_test.cpp  ring_buffer_test.cpp  static_array_test.cpp
tests/test_framework/: test_main.cpp
tests/test_framework/include/: makros.hpp  test_registry.hpp  testing_system.hpp  testings_data.hpp  tests_details.h
