message(STATUS "\n-- ------COREMODULE TEST CMAKE------")
set(CORE_ALL_LIBRARIES_DYNAMIC "")
set(CORE_TEST_SUBDIRECTORIES
  containers
)

foreach(SUBDIR ${CORE_TEST_SUBDIRECTORIES})
    set(SUBDIR_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR}")
    if(EXISTS "${SUBDIR_PATH}" AND IS_DIRECTORY "${SUBDIR_PATH}")
        message(STATUS "COREMODULE_TEST: Adding subdirectory: ${SUBDIR_PATH}")
        add_subdirectory("${SUBDIR_PATH}")
    endif()
endforeach()
message(STATUS "COREMODULE_TEST: creating library CORE_ALL_LIBRARIES...")
add_library(CORE_ALL_LIBRARIES INTERFACE)

target_link_libraries(CORE_ALL_LIBRARIES INTERFACE
    ${CORE_ALL_LIBRARIES_DYNAMIC}
    ${CORE_MODULE_TEST}
)
message(STATUS "COREMODULE_TEST: [SUCCESS] return library in PARENT_SCOPE(TESTS TOP CMAKE)\n")
set(TESTS_ALL_LIBRARIES_DYNAMIC ${TESTS_ALL_LIBRARIES_DYNAMIC} CORE_ALL_LIBRARIES PARENT_SCOPE)
